<resources>
    <string name="app_name">SeaLocations</string>
    <string name="login">Login</string>
    <string name="browse_guest">Browse as guest</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="select_membership_type">Select membership type</string>
    <string name="log_in">Login</string>
    <string name="forget_password">Forget password?</string>
    <string name="register_products">Register sell sea products</string>
    <string name="register_partner">Register Partner</string>
    <string name="register_customer">Register Customer</string>
    <string name="aprove_register">Approve Register</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address "optional"</string>
    <string name="select_city">Select city</string>
    <string name="select_action_type">Choose activity type</string>
    <string name="boats">Boats</string>
    <string name="tanks">Jet Ski</string>
    <string name="drivers">Diving</string>
    <string name="sea_requirements">Supplies Sea </string>
    <string name="sea_services">Sea Services</string>
    <string name="sell_sea_products">Sell Sea Products</string>
    <string name="select_activity_type">Activity type</string>
    <string name="activity_describe">Activity description</string>
    <string name="record_number">Record Number</string>
    <string name="attach_record_image">Attach commercial record image</string>
    <string name="agree_licence">I have read the Terms of Service and have approved them</string>
    <string name="record_number_commercial">Commercial record number</string>
    <string name="shop_name">Shop</string>
    <string name="licence_sea">Driving License</string>
    <string name="trip_type">Trip Type</string>
    <string name="rent_value">Rent value boat per hour</string>
    <string name="select_location">Choose your location from the map</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="passengers_number">Passengers number</string>
    <string name="boat_name">Boat name</string>
    <string name="boat_number">Boat number</string>
    <string name="diving">Diving</string>
    <string name="fishing">Fishing</string>
    <string name="picnic">Picnic</string>
    <string name="tanks_type">Jet Ski type</string>
    <string name="tanks_number">Jet ski number</string>
    <string name="select_new_licence">Attach the latest diving license</string>
    <string name="note_diving">About the diver</string>
    <string name="diving_type">Diving type</string>
    <string name="company_licence">Licensed company</string>
    <string name="licence_level">Licence level</string>
    <string name="licence_driving">Diving licence number</string>
    <string name="full_name">Full name matches the card</string>
    <string name="product_type">Product type</string>
    <string name="note_product">Product description</string>
    <string name="value_product">Product value</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="contact_us">Contact us</string>
    <string name="my_profile">My profile</string>
    <string name="suggestion_contact_us">For complaints and suggestions please contact us on</string>
    <string name="phone_txt">0096612345678910</string>
    <string name="email_txt">info@sealocations.com</string>
    <string name="location_txt">Jeddah - Saudi Arabia</string>
    <string name="change_image">Change Image Profile</string>
    <string name="logout">Logout</string>
    <string name="update_data">Update Data</string>
    <string name="select_department">Select department</string>
    <string name="search_result">Search Result</string>
    <string name="jadah">Jahah</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="expiry_date_boat">Expiry date for boat form</string>
    <string name="expiry_date_driving">Expiry date for driving sea licence</string>
    <string name="select_place_on_map">Select your location from map</string>
    <string name="satellite">Satellite</string>
    <string name="map">Map</string>
    <string name="i_am_here">I am here!</string>
    <string name="shop_describe">Shop describe</string>
    <string name="available_product">Available product</string>
    <string name="add_product">Add product</string>
    <string name="image">Images</string>
    <string name="add_image">Add image</string>
    <string name="approve">Approve</string>
    <string name="select_image_from">Select image from</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="about_us">About us</string>
    <string name="all_right_reserved_sealocation">All right reserved SeaLocation</string>
    <string name="powered_by">Powered by</string>
    <string name="psit_co">PSIT.CO</string>
    <string name="add_tank">Add Jet Ski</string>
    <string name="available_number">Available number</string>
    <string name="rent_value_ber_hour">Rent value ber hour</string>
    <string name="tank_request">Jet Ski Request</string>
    <string name="code_request">Request code</string>
    <string name="type">Type</string>
    <string name="number">Quantity</string>
    <string name="mobile">Mobile</string>
    <string name="add_boat">Add boat</string>
    <string name="add_trip">Add trip</string>
    <string name="coming_event">Coming Event</string>
    <string name="boat_request">Boats Request</string>
    <string name="event_request">Event Request</string>
    <string name="slash">-</string>
    <string name="trip_value">Rent trip value ber hour</string>
    <string name="timing">Timing:</string>
    <string name="starting_point_trip">Starting point trip:</string>
    <string name="trip_direction">Trip direction:</string>
    <string name="trip_duration">Trip duration:</string>
    <string name="conditions_trip">Trip conditions:</string>
    <string name="seats_number">Seats numbers:</string>
    <string name="trip_price">Trip price:</string>
    <string name="add_boat_trip">Add trip for boat</string>
    <string name="courses">Courses</string>
    <string name="add_course">Add course</string>
    <string name="driving_trip">Diving Trips</string>
    <string name="add_trip_driving">Add diving trip</string>
    <string name="course_request">Courses Request</string>
    <string name="trip_request">Trips Request</string>
    <string name="trip_name">Trip name:</string>
    <string name="add_course_driving">Add diving course</string>
    <string name="course_name">Course Name</string>
    <string name="course_duration">Course duration</string>
    <string name="course_requirement">Course requirement</string>
    <string name="diving_thing">Diving equipment</string>
    <string name="available">Available</string>
    <string name="un_avaliable">Unavailable</string>
    <string name="course_value">Course value</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="pass_characters">Password should be 6 characters</string>
    <string name="correct_pass">You should enter correct password</string>
    <string name="loading">Loading.....</string>
    <string name="error">Wrong</string>
    <string name="ok">OK</string>
    <string name="confirm">Confirm</string>
    <string name="info">Information</string>
    <string name="cancel">Cancel</string>
    <string name="error_network">Error in network</string>
    <string name="you_should_attach_image">You should attach driving licence image</string>
    <string name="you_should_select_activity">You should select activity type!</string>
    <string name="rent_value_tank">Rent jet ski value ber hour</string>
    <string name="diving_cylinder">Diving with cylinder</string>
    <string name="free_diving">Free Diving</string>
    <string name="you_should_attach_record_image">You should attach record image</string>
    <string name="this_name_already_taken">This name is already taken</string>
    <string name="this_email_already_taken">This email is already taken</string>
    <string name="mobile_already_taken">This mobile is already taken</string>
    <string name="you_should_select_trip_type">You should select trip type</string>
    <string name="you_should_attach_user_image">You should insert profile image</string>
    <string name="enter_info_for_other_diving">Enter second diving data</string>
    <string name="you_should_choose_diving_type">You should choose diving type!</string>
    <string name="write_type_activity">Write activity type</string>
    <string name="select_lanaguage">Select app language</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="username_or_passowrd_error">username or password wrong</string>
    <string name="update_successfully">Successfully update data!</string>
    <string name="service_profile">Service sea Profile</string>
    <string name="requirement_profile">Supplies sea Profile</string>
    <string name="tank_profile">Jet Ski Profile</string>
    <string name="boat_profile">Boats Profile</string>
    <string name="driver_profile">Diving Profile</string>
    <string name="seller_profile">Sell product Profile</string>
    <string name="product_name">Product name</string>
    <string name="driver_details">Diving details</string>
    <string name="courses_offers">Courses Offers</string>
    <string name="request_course">Course Request</string>
    <string name="reserve">Reserve</string>
    <string name="reserve_">Reserve:</string>
    <string name="fishing_diving">Fishing or Diving</string>
    <string name="reserve_boat_trip">Reserve trip in</string>
    <string name="exit_reserve">Finish Reserve</string>
    <string name="time_trip">Starting trip time</string>
    <string name="person_number">Person Number</string>
    <string name="boats_details">Boats details</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="reserve_later">Reserve Later</string>
    <string name="requirement_details">Supplies sea Details</string>
    <string name="product_img">Product images</string>
    <string name="services_details">Service sea Details</string>
    <string name="product_details">Sell Product Details</string>
    <string name="tanks_details">Jet Ski Details</string>
    <string name="reserve_tank">Reserve jet ski</string>
    <string name="select_number">Determine required number</string>
    <string name="plus">+</string>
    <string name="_15">15</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="delet_process">Delete Process</string>
    <string name="are_you_need_delete_boat">Do you need to delete this boat?</string>
    <string name="you_should_select_diving_equi">You should select diving equipment</string>
    <string name="you_should_enter_all_field">You must verify that all fields are entered</string>
    <string name="no_event_coming">There are no upcoming events</string>
    <string name="no_image">No images attached</string>
    <string name="diving_trip_boat">Diving trip on a boat</string>
    <string name="diving_trip_beach">Diving trip on the beach</string>
    <string name="no_courses">There are no courses</string>
    <string name="equimpent_price">Equipment price</string>
    <string name="add_image_successfully">Image added successfully</string>
    <string name="add_supplier">Add supplies sea</string>
    <string name="my_orders">My orders</string>
    <string name="type_request">Request type</string>
    <string name="mobile_partner">Partner mobile</string>
    <string name="no_orders">No orders</string>
</resources>