<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/codeTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:fontFamily="@font/droidkufi_regular"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/code_request"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/typeTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:fontFamily="@font/droidkufi_regular"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/type_request"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:id="@+id/mobileTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:fontFamily="@font/droidkufi_regular"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/mobile_partner"
        android:textColor="@color/colorPrimary" />
</LinearLayout>