<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/log_img"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <Button
            android:id="@+id/login_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/log_img"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/bg_white_with_border"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/register_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_white_border"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/guest_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_btn"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/bg_dark_border"
            android:text="@string/browse_guest"
            android:textAllCaps="false"
            android:textColor="@color/colorDark" />

        <Button
            android:id="@+id/select_language_btn"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/guest_btn"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_bg"
            android:text="@string/select_lanaguage"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite" />
    </RelativeLayout>
</ScrollView>
