<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MyOrdersActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/droidkufi_bold"
                android:text="@string/my_orders"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/backLayout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_left_arrow" />
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/droidkufi_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/code_request"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/droidkufi_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/type_request"
            android:textColor="@color/colorAccent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:fontFamily="@font/droidkufi_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mobile_partner"
            android:textColor="@color/colorAccent" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/headerLayout"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/noContentOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:fontFamily="@font/droidkufi_regular"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/no_orders"
        android:visibility="gone" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/view" />
</RelativeLayout>