<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BoatsOtherActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/add_supplier"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                tools:ignore="RelativeOverlap" />

            <RelativeLayout
                android:id="@+id/backLayout"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">

                <ImageView
                    android:id="@+id/ic_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_left_arrow" />
            </RelativeLayout>

        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolBar"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/requirement_sea_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/requirementTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/sea_requirements"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/recordNoCommercialEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/requirementTitle"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_gray_border"
                android:hint="@string/record_number_commercial"
                android:inputType="number"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/shopNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/recordNoCommercialEditText"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_gray_border"
                android:hint="@string/shop_name"
                android:inputType="text"
                android:padding="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/shopDescribeEditText"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_below="@+id/shopNameEditText"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_gray_border"
                android:gravity="top"
                android:hint="@string/shop_describe"
                android:inputType="textImeMultiLine"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/attachImageTxt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shopDescribeEditText"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_gray_border"
                android:hint="@string/attach_record_image"
                android:padding="10dp"
                android:textSize="14sp" />

            <RelativeLayout
                android:id="@+id/imageRecordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/attachImageTxt1"
                android:layout_marginBottom="10dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/imageRecordNew"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/top_bg" />

            </RelativeLayout>

            <TextView
                android:id="@+id/select_location_requirement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageRecordLayout"
                android:background="@drawable/bg_gray_border"
                android:hint="@string/select_location"
                android:padding="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/approveBtn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/select_location_requirement"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorGreen"
                android:padding="10dp"
                android:text="@string/approve"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>